# acrylic-ui

./: .gitignore  .npmrc  LICENSE  README.md  components.json  index.html  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  registry.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
app/: global.css  layout.tsx
app/(home)/: layout.tsx  page.tsx
app/demo-fullscreen/: page.tsx
app/docs/: layout.tsx
components/: component-preview.tsx  components-gallery.tsx  docs-layout.tsx  docs-sidebar.tsx  example-backdrop.tsx  examples-map.ts  mdx.tsx  preview-tabs.tsx  sidebar-block.tsx  sidebar-demo.tsx  theme-provider.tsx  theme-switcher.tsx
components/examples/: alert-dialog-demo.tsx  audio-player-demo.tsx  audio-player-mini-demo.tsx  audio-player-stage-demo.tsx  audio-playlist-demo.tsx  auto-textarea-demo.tsx  badge-demo.tsx  badge-selected-item.tsx  breadcrumb-demo.tsx  button-demo.tsx  button-group-demo.tsx  (+71 more)
demo/: App.tsx  index.css
examples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri/src-tauri/.cargo/: config.toml
examples/tauri/src-tauri/capabilities/: default.json
examples/tauri/src-tauri/src/: capture.rs  lib.rs  main.rs
lib/: shared.ts
scripts/: gen-examples.mjs  gen-springs.mjs  verify-home-shell.mjs  verify-shell-mail.mjs  verify-sidebar-menu-trailing.mjs
tokens/: alert.json  button-group.json  button.full.json  button.json  combobox.json  dialog.json  form.json  input.json  notification.json  radio.json  search-field.json  select.json  sidebar.json  slider.json  stepper.json  switch.json
(+183 files in other folders)
