[package]
name = "tauri-playground"
version = "0.1.0"
description = "acrylic-ui Tauri vibrancy playground"
authors = ["acrylic-ui"]
edition = "2021"

[lib]
name = "tauri_playground_lib"
# cdylib removed: mingw BFD ld can't handle Tauri's export count (export ordinal
# too large > 65535). The desktop bin links via rlib. Re-add "cdylib" if/when
# targeting mobile (Android/iOS). Mirrors snapick's proven WSL→Windows setup.
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7"
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Registry",
] }
# WebView2-native CapturePreview — in-app screenshot of the REAL composited
# surface (incl. backdrop-filter), no foreground/focus steal. Used for automated
# visual verification of the vibrancy result. Mirrors snapick's capture.rs.
webview2-com = "0.38"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
